Bug 305985. After clicking in blank content area, focus stays in some widgets when it should have left. r=mats, sr=bryner