content/events/src/nsEventStateManager.cpp
@@ -5042,7 +5042,8 @@ nsEventStateManager::MoveCaretToFocus()
               newRange->SelectNodeContents(currentFocusNode);
               nsCOMPtr<nsIDOMNode> firstChild;
               currentFocusNode->GetFirstChild(getter_AddRefs(firstChild));
-              if (!firstChild ) {
+              if (!firstChild ||
+                  mCurrentFocus->IsContentOfType(nsIContent::eHTML_FORM_CONTROL)) {
                 // If current focus node is a leaf, set range to before the
                 // node by using the parent as a container.
                 // This prevents it from appearing as selected.
